--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
     backend:
-        build: server
+        build: 
+            context: ./server
+            dockerfile: Dockerfile.dev
         container_name: gql-server
         restart: always
         ports:
@@ -9,7 +11,9 @@ services:
             - ./server:/app
             - /app/node_modules
         environment: 
-            MONGO_URI: mongodb://root:example@localhost:27017/
+            - NODE_ENV=development
+            - MONGO_URI=mongodb://root:example@mongo:27017/
+        command: npm run dev        
         depends_on:
             - mongo
         networks:
@@ -28,16 +32,20 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: example
         networks:
             - express-mongo
-
-#  mongo-express:
-#    image: mongo-express
-#    restart: unless-stopped
-#    ports:
-#      - 8081:8081
-#    environment:
-#      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-#      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-#      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+    mongo-express:
+        container_name: express-db
+        image: mongo-express
+        restart: unless-stopped
+        depends_on: 
+            - mongo
+        ports:
+            - 8081:8081
+        environment:
+            ME_CONFIG_MONGODB_ADMINUSERNAME: root
+            ME_CONFIG_MONGODB_ADMINPASSWORD: example
+            ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+        networks: 
+            - express-mongo
 
 networks:
     react-express:
